@@ -1,3 +1,14 @@
+2011-06-22  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r89489.
+        http://trac.webkit.org/changeset/89489
+        https://bugs.webkit.org/show_bug.cgi?id=63203
+
+        Broke chromium mac build on build.webkit.org (Requested by
+        abarth on #webkit).
+
+        * wtf/Platform.h:
+
 2011-06-22  Cary Clark  <caryclark@google.com>
 
         Reviewed by Darin Fisher.
